--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /frontend/node_modules
+/backend/node_modules
 *.pnp
 *.pnp.js
 
@@ -10,6 +11,7 @@
 
 # production
 /frontend/build
+/backend/build
 
 # misc
 .DS_Store
