--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "src/main.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tsc",
+    "start": "node build/main.js",
+    "dev": "nodemon src/main.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -19,10 +22,5 @@
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
-  },
-  "scripts": {
-    "build": "npx tsc",
-    "start": "node build/main.js",
-    "dev": "nodemon src/main.ts"
   }
 }
