--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -3,27 +3,27 @@
   "name": "The Yearn Vault",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "/logo/favicon.ico",
       "sizes": "16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "icons/favicon-16x16.png",
+      "src": "/logo/favicon-16x16.png",
       "type": "image/png",
       "sizes": "16x16"
     },
     {
-      "src": "icons/favicon-32x32.png",
+      "src": "/logo/favicon-32x32.png",
       "type": "image/png",
       "sizes": "32x32"
     },
     {
-      "src": "icons/favicon-180x180.png",
+      "src": "/logo/favicon-180x180.png",
       "type": "image/png",
       "sizes": "180x180"
     },
     {
-      "src": "icons/favicon-192x192.png",
+      "src": "/logo/favicon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     }
